Fine tune release automation

--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
-    "build": "node esbuild.config.mjs production"
+    "build": "npm run prettier && node esbuild.config.mjs production && cp manifest.json build && [ -f styles.css ] && cp styles.css build/ || true",
+    "pretest": "eslint src/",
+    "test": "jest --passWithNoTests",
+    "prettier": "prettier -w 'src/**/*.ts'",
+    "preversion": "npm run build && npm run test",
+    "version": "node version-bump.mjs && node version-changelog.mjs && git add manifest.json versions.json CHANGELOG.md && cp manifest.json build/",
+    "postversion": "git push && git push --tags && gh release create $npm_package_version -F CHANGELOG.md --draft build/main.js manifest.json $([ -f styles.css ] && echo 'styles.css' || true)"
   },
   "author": "wenlzhang",
   "devDependencies": {
     "@types/node": "^16.11.7",
     "esbuild": "^0.13.15",
+    "eslint": "^8.15.0",
+    "gh": "^2.8.9",
+    "jest": "^27.5.1",
     "obsidian": "latest",
+    "prettier": "^2.6.2",
     "typescript": "^4.4.4"
   }
 }
