--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^27.5.1",
     "obsidian": "latest",
     "prettier": "^2.6.2",
+    "ts-jest": "^27.1.5",
     "typescript": "^4.4.4"
   }
 }
